--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -82,3 +82,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/DroneCoon.UhuGameMode",NewName="/Script/DroneCoon.UhuGameModeBase")
