Preparations HTTP Requests, APITestClasses added

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Blueprints/Maps/MenuMap.MenuMap
-EditorStartupMap=/Game/Blueprints/Maps/MenuMap.MenuMap
+GameDefaultMap=/Game/Blueprints/Maps/TestMap.TestMap
+EditorStartupMap=/Game/Blueprints/Maps/TestMap.TestMap
 GlobalDefaultGameMode=/Game/Blueprints/Game/GameMode/BP_GameMode.BP_GameMode_C
 ServerDefaultMap=/Game/Blueprints/Maps/MenuMap.MenuMap
 
@@ -85,3 +85,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/DroneCoon.UhuGameMode",NewName="/Script/DroneCoon.UhuGameModeBase")
+
