Build 4, Discord Plugin

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -108,7 +108,14 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
 +MapsToCook=(FilePath="/Game/Blueprints/Maps/MenuMap")
++MapsToCook=(FilePath="/Game/Blueprints/Maps/TestMap")
 +DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
+
+[/Script/DiscordIntegration.DiscordSettings]
+ApplicationId=1327578681652019221
+
+[/Script/DiscordGame.DiscordSettings]
+ApplicationId=1327578681652019221
 
